orgs/base/force-app/main/default/objects/Shipment__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Maersk</fullName>
            </value>
            <value>
                <fullName>DB Schenker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>