orgs/base/force-app/main/default/objects/Shipment__c/fields/Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country__c</fullName>
    <label>Destination Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>