orgs/base/force-app/main/default/objects/Shipment__c/fields/Handling__c.field-meta.xml
<CustomField>
    <fullName>Handling__c</fullName>
    <label>Handling</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fragile</fullName>
            </value>
            <value>
                <fullName>Refrigerated</fullName>
            </value>
            <value>
                <fullName>Hazardous</fullName>
            </value>
            <value>
                <fullName>Oversized</fullName>
            </value>
            <value>
                <fullName>Signature Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>