orgs/base/force-app/main/default/objects/Shipment__c/fields/Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_Kg__c</fullName>
    <label>Weight (kg)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>